--- a/mystyles.css
+++ b/mystyles.css
@@ -102,7 +102,25 @@
         max-width: 500px;
 
       }
+.centered-pic{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left:10%;
+        padding-right:10%;
+        width:40%;
+    }
+
     /*past page*/
+    .big-pic{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left:10%;
+        padding-right:10%;
+        width:50%;
+    }
+
     .button {
         position:relative;
         display: inline-block;
@@ -112,10 +130,30 @@
         background:rgb(219, 234, 247);
         transition: 0.4s;
         cursor:grab;
-        font: 22px;
         color: black;
-        text-align: center;
+        /*text-align: center;*/
         border: none;  
+    }
+.red-button {
+        position:relative;
+        display: inline-block;
+        margin: 40px auto;
+        /*gives margin above and below buttons*/
+        background:rgb(246, 212, 212);
+        transition: 0.4s;
+        cursor:grab;
+        color: black;
+        border: solid rgb(239, 112, 112);
+        padding: 14px 28px;
+    
+
+    }
+    .video {
+        margin: 0 auto;
+        width: 400px;
+        height: 340px;
+        display: block;
+        padding: -10px;
     }
     .buttons {
         text-align: center;
@@ -126,6 +164,14 @@
         color:whitesmoke;
         box-shadow: 0 8px 10px 0 rgba(0,0,0,0.24), 0 13px 40px 0 rgba(0,0,0,0.19);
     }
+    .red-button:hover {
+        background-color:rgb(141, 25, 25);
+        border: solid rgb(148, 46, 46);
+        opacity: 1;
+        color:whitesmoke;
+        box-shadow: 0 8px 10px 0 rgba(104, 37, 37, 0.24), 0 13px 40px 0 rgba(0,0,0,0.19);
+    }
+
 /*Learning point - syntax is .link:visited NOT .link a:visited*/
 /*visited must come before link otherwise hover doesn't work after initial visit*/
 
@@ -145,3 +191,45 @@
 .footer {
     background-color: rgb(219, 234, 247);
 }
+
+/* Modals */
+.modal {
+    display: none; 
+    position: relative; 
+    z-index: 1; 
+    padding-top: 10px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 98%; 
+    overflow: scroll; 
+    background-color: #eafdf3;
+    margin: auto;
+    padding: 20px;
+    border: 9px solid rgb(36, 177, 123);
+    width: 80%;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #eafdf3;
+    margin: auto;
+    padding: 20px;
+    border: 9px solid rgb(36, 177, 123);
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #e60d0d;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
