--- a/mystyles.css
+++ b/mystyles.css
@@ -96,10 +96,11 @@
         text-align: justify;
         color: black;
         padding: (10% 0%);
-        width: 80%;
+        width: 95%;
         margin-left: auto;
         margin-right: auto;
-        max-width: 500px;
+        max-width: 1000px;
+        font-size: 110%;
 
       }
 .centered-pic{
