--- a/mystyles.css
+++ b/mystyles.css
@@ -234,3 +234,14 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+  @media screen and (max-width: 400px) {
+    .figure,
+    li#f-mycroft {
+      margin-right: 3.317535545023696682%;    /* 21px / 633px */
+      width: 48.341232227488151658%;          /* 306px / 633px */
+    }  li#f-watson,
+    li#f-moriarty {
+      margin-right: 0;
+    }
+  }
