--- a/mystyles.css
+++ b/mystyles.css
@@ -46,7 +46,7 @@
     }
     .title {
         position:absolute;
-        top:15%;
+        top:50px;
         left:50%;
         transform: translate(-50%, -50%);
         font-size: 200%;
