--- a/mystyles.css
+++ b/mystyles.css
@@ -46,10 +46,10 @@
     }
     .title {
         position:absolute;
-        top:50px;
+        top:10%;
         left:50%;
         transform: translate(-50%, -50%);
-        font-size: 200%;
+        font-size: 100%;
         font-family: 'georgia';   
     }
 
