--- a/mystyles.css
+++ b/mystyles.css
@@ -46,10 +46,10 @@
     }
     .title {
         position:absolute;
-        top:10%;
+        top: 90px;
         left:50%;
         transform: translate(-50%, -50%);
-        font-size: 100%;
+        font-size: 2vw;
         font-family: 'georgia';   
     }
 
