--- a/mystyles.css
+++ b/mystyles.css
@@ -46,7 +46,7 @@
     }
     .title {
         position:absolute;
-        top: 90px;
+        top: 20%;
         left:50%;
         transform: translate(-50%, -50%);
         font-size: 2vw;
