--- a/mystyles.css
+++ b/mystyles.css
@@ -151,8 +151,8 @@
     }
     .video {
         margin: 0 auto;
-        width: 400px;
-        height: 340px;
+        width: 70%;
+        height: 65%;
         display: block;
         padding: -10px;
     }
